--- a/PlanIFYweb/PlanIFYWOD/templates/PlanIFYweb/navbar.html
+++ b/PlanIFYweb/PlanIFYWOD/templates/PlanIFYweb/navbar.html
@@ -5,6 +5,8 @@
     <head>
         <title>{{ title }}</title>
         <link rel="stylesheet" type="text/css" href="{% static '/css/main.css' %}">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     </head>
     {% if user.is_authenticated %}
         <div class="nav-bar">
